--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="aboutme">https://github.com/qingfengmy/kitdemo</string>
+    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
 
 </resources>
